# fullstats_test_task

./: README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile  pyproject.toml
src/api/: urls.py
src/config/: celery.py  settings.py  urls.py
src/posts/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
src/posts/tests/: test_post_api.py
